@@ -1,5 +1,5 @@
 /* @author  pjfl@cpan.org (Peter Flanigan)
- * @version 0.13.41
+ * @version 0.13.42
  */
 
 /* Breaks */
@@ -14,6 +14,7 @@
 @bg-dark: khaki;
 @bg-darker: sandybrown;
 @bg-darkest: hsl(0 0 0.2); /* #333 gray20 */
+@bg-selected: white;
 
 @text-close: firebrick;
 @text-dark: black;
